02. 평균임금 공부 완료료

--- a/인사,급여/02.평균임금.md
+++ b/인사,급여/02.평균임금.md
@@ -54,4 +54,26 @@ _**2. 퇴직으로 인해 비로소 지급사유가 발생한 연차유급휴가
 
 > 입사 첫날 연장근로를 하다가 업무상 부상을 입은 경우 평균임금은 _**근로자의 통상의 생활임금을 사실대로 산정할 수 있는 방법에 의하되 그와 같은 방법이 없을 때에는 당해 근로자가 근로하고 있는 지역을 중심으로 한 일대에 있어서 동종의 작업에 종사하고 있는 상용근로자의 평균임금의 액을 표준**_
 
+## (7) 대기발령 또는 징계 도중 퇴직한 경우
+
+> 평균임금을 산정함에 있어서 평균임금 산정기준이 되는 기간에서 쟁점이 되는 것은 직위해제기간, 대기발령기간, 감봉기간과 같은 '징계 등의 기간'을 포함하는지가 문제
+
+근로기준법 시행령 제2조 2항을 반대해석 적용하면 근로자 귀책사유로 인한 유업기간, 불법파업기간, 감봉기간, 직위해제기간, 대기발령기간, 결근 등 개인적인 사유인 경우 평균임금 산정 대상기간에 포함. 
+
+
+평균임금은 근로자의 통상의 생활임금을 사실대로 산정하는 것을 그 기본원리로 하는 것. 이러한 평균임금을 그 산정의 기초로 하는 퇴직금제도는 직급, 호봉 등에 따른 근로자의 통상의 생활임금을 종전과 같이 보장하는데 그 취지가 있다고 할 것이므로 퇴직급여가 특수하고 우연한 사정에 의하여 통상의 경우보다 현저하게 많거나 적은 금액으로 되는 것은 그 제도의 근본취지에 어긋나는 것이기 때문에 그 기간을 제외하고 평균임금을 계산하는 것이 타당.
+
+
+## (8) 육아휴직한 경우 평균임금
+
+근로자가 육아휴직 후 1개월 반만 근무하고 회사를 퇴직하였을 경우 퇴직금 계산을 위한 평균임금의 산정은 근로기준법 제19조 제1항의 '취업후 3월 미만도 이에 준한다'는 규정을 감안. 실제 근로를 제공한 1개월 반 동안의 임금을 그 기간의 일수로 나우어 산정하는 것이 타당.
+
+근로자가 휴직 후 바로 퇴사할 경우 휴직한 기간이 3개월을 초과하여 평균임금 산정기간이 없게 되는 경우에는 휴직한 첫 날을 평균임금 산정발생일로 보아 이전 3월간을 대상으로 평균임금을 산정하여야 한다. 아울러 산출된 평균금액이 당해 근로자의 통상임금보다 저액일 경우에는 그 통상임금액을 평균임금으로 해야함.
+
+
+## (9) 기타의 경우
+
+1. 국내회사의 신분이 유지되면서 해외로 파견될 경우는 국내회사와 사용종속관계가 유지. 해외근무기간도 국내회사의 퇴직금 산정기간에 포함하여야 할 것. 이때 퇴직금 산정을 위한 평균임금은 달리 볼 사정이 없다면 근로기준 법상 임금에 해당하는 서울급여와 중국급여를 합하여 계산하는 것이 타당.
+2. 무단결근기간도 평균임금 산정기간에 포함하여 산정. 산출된 평균임금이 그 근로자의 통상임금보다 적으면 그 통상임금액을 평균임금액으로 하여 퇴직금을 산정.
+3. 고요온동부는 그 외에 평균임금을 산정할 수 없는 경우에 평균임금 산정방법을 고시.
 
